fix select menu z-index behavior

--- a/src/data-browser/charts/MapsGraphs.css
+++ b/src/data-browser/charts/MapsGraphs.css
@@ -19,7 +19,7 @@
   top: 0;
   right: 0;
   padding: 1em;
-  z-index: 9999;
+  z-index: 2;
   width: 140px;
   background-color: rgba(255, 255, 255, 0.7)
 }
